<resources>
    <string name="app_name">NoibaiAirport</string>
    <string name="tab_home">Home</string>
    <string name="tab_flight">Flight</string>
    <string name="tab_booking">Booking</string>
    <string name="tab_service">Service</string>
    <string name="tab_shopdine">ShopsDine</string>
    <string name="tab_tuongtac">Tuongtac</string>
    <string name="tab_together">Together</string>
    <string name="tab_menu">More</string>
    <string name="back_notification">Click again to exit</string>
    <string name="txt_Eng">English</string>
    <string name="txt_Vie">VietNam</string>
    <string name="txt_title_profile">Profile</string>
    <string name="hotline"><u><b><i>1900636535</i></b></u></string>
    <string name="dialog_title">Language setting</string>
    <string name="dialog_message">Are you sure you want to change the language of the application</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="change_language_title">Language</string>
    <string name="txt_flight_schedule">Flight schedule</string>
    <string name="txt_airlines">Airlines</string>
    <string name="txt_flight_checkin">Check-in online</string>
    <string name="txt_flight_booking">Flight booking online</string>
    <string name="txt_flight_instruction">Flight Instruction</string>
    <string name="txt_title_departures">Domestic Departures</string>
    <string name="txt_title_arrivals">Domestic Arrivals</string>
    <string name="txt_title_departures_t2">International Departures</string>
    <string name="txt_title_arrivals_t2">International Arrivals</string>
    <string name="txt_title_other">Utilities</string>
    <string name="txt_title_follow">Flight Follow</string>
    <string name="txt_filght_search">Search</string>
    <string name="edt_filght_search"> Click for search</string>
    <string name="edt_filght_id">Flight Number</string>
    <string name="edt_filght_address">Destination</string>
    <string name="edt_filght_date">Today</string>
    <string name="edt_filght_airline">Airline</string>
    <string name="btn_search">Search</string>
    <string name="language_english" translatable="false">English</string>
    <string name="language_vietnamese" translatable="false">Tiếng Việt</string>
    <string-array name="language_names">
        <item>@string/language_english</item>
        <item>@string/language_vietnamese</item>
    </string-array>
    <string name="language_english_code" translatable="false">en</string>
    <string name="language_vietnamese_code" translatable="false">vi</string>
    <string-array name="language_codes">
        <item>@string/language_english_code</item>
        <item>@string/language_vietnamese_code</item>
    </string-array>
    <string name="txt_hotline">Hotline</string>
    <string name="txt_loyalty_program">Loyalty program</string>
    <string name="txt_evaluate">Feedback - Reflections</string>
    <string name="txt_about">About</string>
    <string name="txt_language">Language </string>
    <string name="title_feedback">Feedback</string>
    <string name="txt_map">Station Map</string>
    <string name="txt_baggage_lost">Baggage Lost Found</string>
    <string name="txt_tax_refund">TAX Refund</string>
    <string name="txt_shops">Shops</string>
    <string name="txt_dine">Foot and Drinks</string>
    <string name="appbar_flightdetail">Flight Detail</string>
    <string name="mesaage_error_search">No Result</string>
    <string name="title_search">Flight Search</string>
    <string name="title_checkin">Check-in Online</string>
    <string name="departures"><u><b><i>Departures</i></b></u></string>
    <string name="arrivals"><u><b><i>Arrivals</i></b></u></string>
    <string name="hint_input_name_feedback">- Input Username</string>
    <string name="hint_input_email_feedback">- Input Email</string>
    <string name="text_register">Please enter your information to send and get feedback</string>
    <string name="hint_user_register">Name (*)</string>
    <string name="hint_email_register">Email (*)</string>
    <string name="btn_comfirm">Comfirm</string>
    <string name="switch_addfeedback">Allow Public</string>
    <string name="txt_title_answer"> ---------    Answer    ---------</string>
    <string name="tab_thutucbay">Passenger Guide</string>
    <string name="tab_hanhly">Baggage and Personal Papers</string>
    <string name="viewpage_shop_general">Infomation</string>
    <string name="viewpage_shop_menu">Menu</string>
    <string name="error_network">Connection Error</string>
    <string name="error">Error</string>
    <string name="error_network_message">Connection error, please check the network and try again</string>
    <string name="terminal">Terminal </string>
    <string name="floor">Floor </string>
    <string name="area">Area </string>
    <string name="phone">Phone</string>
    <string name="price">Price </string>
    <string name="description">Description: </string>
    <string name="title_service_detail">Detail Service</string>
    <string name="time_table">Timetable </string>
    <string name="title_activity_main_airline_detail">MainAirlineDetail</string>
    <string name="location">Location: </string>
    <string name="hotline_airline">Hotline: </string>
    <string name="check_in">Check-in </string>
    <string name="booking">Booking </string>
    <string name="list_destination">Destination List</string>
    <string name="title_airline_detail">Airline Detail</string>
    <string name="title_search_airline">List Airline</string>
    <string name="title_search_airport">List Airport</string>
    <string name="txt_comment">Comments</string>
    <string name="txt_like">Like</string>
    <string name="btn_load_earlier">Load Earlier Flight</string>
    <string name="edt_search_airport_arrivals">Origin</string>
    <string name="edt_search_airport_departures">Destination</string>
    <string name="edt_search_airline_departures">Airline</string>
    <string name="hint_search">Search</string>
    <string name="estimate">Estimate</string>
    <string name="destination">Destination</string>
    <string name="check_in_counte">Checkin counter</string>
    <string name="lobby">Lobby</string>
    <string name="boarding">Boarding</string>
    <string name="security">Security wating time</string>
    <string name="suppliers">Suppliers:</string>
    <string name="schedule_time">Schedule Time:</string>
    <string name="txt_flight_listfollow">Flight follow</string>
    <string name="txt_flight_departure">Flight Departure</string>
    <string name="txt_flight_arrivals">Flight Arrivals</string>
    <string name="feedback_content">Thans you for contacting, We\'ll do my best to help you.
        \n\nAfter we receives your feedback, we will answer as soon as posible
        \n\nPlease let us know if you have any questions or need further assistance. We\'re happy to help
        \n\nBest regards!
    </string>
    <string name="hello">Hello</string>
    <string name="title_register">Register</string>
    <string name="title_add_feedback">Add Feedback</string>
    <string name="show_error_follow_flight">Follow Flight is successful</string>
    <string name="show_failed_follw_flight">Flight tracking failed</string>
    <string name="btn_track_flight">Track this flight</string>
    <string name="btn_unfollow_flight">UnFollow</string>
    <string name="txt_loading_dialog">Loading. Please wait...</string>
    <string-array name="arr_terminal">
        <item>Terminal</item>
        <item>T1-Domestic Terminal</item>
        <item>T2-International Terminal</item>
    </string-array>
    <string-array name="arr_floor">
        <item>Floor</item>
        <item>Floor 1</item>
        <item>Floor 2</item>
        <item>Floor 3</item>
    </string-array>
    <string-array name="arr_area">
        <item>Area</item>
        <item>Public Area</item>
        <item>Passenger Area</item>
    </string-array>
    <string name="title_activity_fragment__together">Fragment_Together</string>
    <string name="edt_serch_together_terminal">- Select terminal</string>
    <string name="edt_serch_together_time">- Select time</string>
    <string name="edt_destination">- Destination</string>
    <string name="Sex">Gender: </string>
    <string name="sex_all">All</string>
    <string name="sex_male">Male</string>
    <string name="sex_female">Female</string>
    <string name="edt_serch_together_name">* Name</string>
    <string name="edt_serch_together_phone">* Phone</string>
    <string name="edt_serch_together_price">* Price Estimate</string>
    <string name="edt_serch_together_quantity">Quantity</string>
    <string name="edt_serch_together_description">- Input Description</string>
    <string name="edt_serch_together_district">District</string>
    <string name="edt_serch_together_wards">Wards </string>
    <string name="item_together_time">Time: </string>
    <string name="item_together_phone">Phone: </string>
    <string name="item_together_gender">Gender: </string>
    <string name="item_together_terminal">Terminal: </string>
    <string name="item_together_district">Destination: </string>
    <string name="item_together_wards">Ward: </string>
    <string name="item_together_quantity">Quantity: </string>
    <string name="title_add_together">Post New</string>
    <string name="error_get_ward">You have not yet select district</string>
    <string name="title_datetime">DateTime</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_update">Update</string>
    <string name="error_name_empty">You have not yet input name</string>
    <string name="error_name_phone">You have not yet input phone</string>
    <string name="error_name_time">You have not yet select time</string>
    <string name="error_name_quantity">You have not yet select quantity</string>
    <string name="error_name_district">You have not yet select district</string>
    <string name="error_name_ward">You have not yet select ward</string>
    <string name="error_name_gender">You have not yet select gender</string>
    <string name="error_name_description">You have not yet input description</string>
    <string name="error_time_false">You have not yet select time</string>
    <string name="title_notify">Notify</string>
    <string name="message_notify">Post new is successful</string>
    <string name="message_delete">Delete new is successful</string>
    <string name="message_update">Update new is successful</string>
    <string name="message_delete_together">Do you want to delete the news</string>
    <string name="error_time">Invalid time</string>
    <string name="error_phone">Phone number is not formatted correctly</string>
    <string name="btn_together_empty">No client expected. You can log a general found for more chi phí and out of more. Customer clients will be found</string>
    <string name="title_search_new">Search new</string>
    <string name="title_quantity">Quantity</string>
    <string name="myorder">My Order</string>
    <string name="all_order">All Order</string>
    <string name="error_not_param">You have not entered a parameter</string>
    <string name="title_guide_flight">Track this flight to receive a notification whenever this flight status changes</string>
    <string name="title_warning">Warning!</string>
    <string name="message_warning">This is a utility provided by a third party. Noibai Airport is not responsible for the operation of this add-on</string>
    <string name="tab_domestic">Domestic Airlines</string>
    <string name="tab_international">International Airlines</string>
    <string name="title_airline">Airlines</string>
    <string name="message_warning_together">This is supported by the information information. You have a guest checker and check your task on active activity</string>
    <string name="message_comfirm_order">Other passengers will see your post. Do you agree to share your contact information?</string>
    <string name="title_information">Information</string>
</resources>