<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/refesh_flight_info"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/relative_search_small"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/dp3"
            android:paddingLeft="@dimen/dp10"
            android:paddingRight="@dimen/dp10"
            android:paddingTop="@dimen/dp5">

            <ImageView
                android:id="@+id/img_search_flight"
                android:layout_width="@dimen/dp30"
                android:layout_height="@dimen/dp30"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_search"
                android:tint="@color/text_flight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp5"
                android:layout_toRightOf="@+id/img_search_flight"
                android:background="@drawable/spr_edittext_search"
                android:hint="@string/edt_filght_search"
                android:padding="@dimen/dp3"
                android:textSize="@dimen/text_15sp" />

            <View
                android:layout_width="@dimen/dp150"
                android:layout_height="@dimen/dp3"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:background="@color/text_flight" />
        </RelativeLayout>

        <LinearLayout
            android:paddingTop="@dimen/dp20"
            android:paddingRight="@dimen/dp20"
            android:paddingLeft="@dimen/dp20"
            android:visibility="gone"
            android:id="@+id/relative_search_full"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:textCursorDrawable="@color/text_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/text_flight"
                android:hint="@string/edt_filght_id"
                android:textSize="@dimen/text_14sp" />

            <EditText
                android:layout_marginTop="@dimen/dp10"
                android:textCursorDrawable="@color/text_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/text_flight"
                android:hint="@string/edt_filght_address"
                android:textSize="@dimen/text_14sp" />
            <RelativeLayout
                android:layout_marginTop="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="@dimen/dp15"
                    android:textCursorDrawable="@color/text_flight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:backgroundTint="@color/text_flight"
                    android:hint="@string/edt_filght_date"
                    android:textSize="@dimen/text_14sp" />
                <ImageView
                    android:tint="@color/text_flight"
                    android:src="@drawable/ic_date"
                    android:layout_centerVertical="true"

                    android:layout_alignParentRight="true"
                    android:layout_width="@dimen/dp30"
                    android:layout_height="@dimen/dp30" />
            </RelativeLayout>
            <EditText
                android:layout_marginTop="@dimen/dp10"
                android:textCursorDrawable="@color/text_flight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:backgroundTint="@color/text_flight"
                android:hint="@string/edt_filght_airline"
                android:textSize="@dimen/text_14sp" />

            <Button
                android:text="@string/btn_search"
                android:background="@drawable/spr_button"
                android:textColor="@color/text_flight"
                android:layout_marginTop="@dimen/dp10"
                android:layout_gravity="center_horizontal"
                android:layout_width="@dimen/dp150"
                android:layout_height="@dimen/dp40" />
            <LinearLayout
                android:id="@+id/linear_visiblity"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp30">
                <View
                    android:background="@color/text_flight"
                    android:layout_gravity="center_vertical"
                    android:layout_width="@dimen/dp150"
                    android:layout_height="@dimen/dp3"/>
            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_flight_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</android.support.v4.widget.SwipeRefreshLayout>